--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
         <input type="checkbox" id="five">
         <div id="page5" class="page">
-          <div class="front"><img src="gambar/4.jpg" class="img4"></div>
+          <div class="front"><img src="4.jpg" class="img4"></div>
           <div class="back">Cinta katakan cinta</div>
           <label for="five"></label>
         </div>
